changes in  securityconfig